--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
